# kaiki

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  deny.toml  dprint.json  justfile  package.json
.github/: codecov.yml  labeler.yml  zizmor.yml
.github/actions/check-version/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: autofix.yml  ci.yml  ci_security.yml  pr.yml  release_cli.yml  release_napi.yml  release_wasm.yml
.serena/: project.yml
.serena/memories/: optimizations.md  project-overview.md
.serena/memories/architecture/: perf-improvements.md
apps/kaiki_cli/: Cargo.toml
apps/kaiki_cli/src/: error.rs  init.rs  main.rs  prepare.rs
apps/kaiki_cli/tests/: cli.rs
crates/kaiki_config/: Cargo.toml
crates/kaiki_config/src/: env.rs  lib.rs
crates/kaiki_core/: Cargo.toml
crates/kaiki_core/src/: ci.rs  image_finder.rs  lib.rs  processor.rs
crates/kaiki_core/tests/: integration.rs  pipeline.rs  reg_suit_compat.rs
crates/kaiki_core/tests/common/: mod.rs
crates/kaiki_diff/: Cargo.toml
crates/kaiki_diff/benches/: pixelmatch_bench.rs
crates/kaiki_diff/src/: antialias.rs  lib.rs  pixel.rs  regions.rs  render.rs
crates/kaiki_diff/tests/: pixelmatch_compat.rs
crates/kaiki_git/: Cargo.toml
crates/kaiki_git/src/: commit_explorer.rs  lib.rs
crates/kaiki_notify/: Cargo.toml
crates/kaiki_notify/src/: github.rs  github_client.rs  lib.rs  slack.rs
crates/kaiki_notify/tests/: github_client.rs  github_notify.rs  slack_notify.rs
crates/kaiki_report/: Cargo.toml
crates/kaiki_report/src/: lib.rs  report.css  report.js
crates/kaiki_report/templates/: report.html
crates/kaiki_storage/: Cargo.toml
crates/kaiki_storage/src/: gcs.rs  lib.rs  s3.rs
napi/kaiki/: .gitignore  Cargo.toml  package.json  plugin-loader.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
napi/kaiki/__bench__/: pipeline.bench.ts
napi/kaiki/__tests__/: helpers.ts  plugin-loader.test.ts  run.test.ts
napi/kaiki/src/: lib.rs
napi/kaiki/src/adapters/: key_generator.rs  mod.rs  notifier.rs  storage.rs
npm/kaiki/: package.json
npm/kaiki/scripts/: postinstall.js
wasm/kaiki_diff_wasm/: Cargo.toml  package.json
wasm/kaiki_diff_wasm/src/: lib.rs
wasm/kaiki_diff_wasm/tests/: wasm_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
