[package]
name = "kaiki_core"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Core orchestration for kaiki visual regression testing"

[lints]
workspace = true

[features]
default = []
ximgdiff = ["kaiki_report/ximgdiff"]

[dependencies]
compact_str = { workspace = true }
image = { workspace = true }
kaiki_config = { workspace = true }
kaiki_diff = { workspace = true }
kaiki_git = { workspace = true }
kaiki_notify = { workspace = true }
kaiki_report = { workspace = true }
kaiki_storage = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
