[package]
name = "kaiki_diff"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Pixelmatch-compatible image comparison engine for visual regression testing"

[lints]
workspace = true

[dependencies]
bumpalo = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "pixelmatch_bench"
harness = false
