[package]
name = "kaiki_git"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Git-based key generation for kaiki visual regression testing"

[lints]
workspace = true

[dependencies]
gix = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
