[package]
name = "kaiki_notify"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "GitHub and Slack notification support for kaiki visual regression testing"

[lints]
workspace = true

[dependencies]
kaiki_config = { workspace = true }
kaiki_report = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
