[package]
name = "kaiki_report"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTML and JSON report generation for kaiki visual regression testing"

[lints]
workspace = true

[features]
default = []
ximgdiff = []

[dependencies]
kaiki_config = { workspace = true }
compact_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
askama = { workspace = true }
thiserror = { workspace = true }
