[package]
name = "kaiki_report"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "HTML and JSON report generation for kaiki visual regression testing"

[lints]
workspace = true

[features]
default = []
ximgdiff = []

[dependencies]
askama = { workspace = true }
compact_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
