[package]
name = "kaiki_storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "S3 and GCS storage backends for kaiki visual regression testing"

[lints]
workspace = true

[dependencies]
kaiki_config = { workspace = true }
tokio = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
google-cloud-storage = { workspace = true }
flate2 = { workspace = true }
walkdir = { workspace = true }
mime_guess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
