[package]
name = "kaiki_storage"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "S3 and GCS storage backends for kaiki visual regression testing"

[lints]
workspace = true

[dependencies]
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
flate2 = { workspace = true }
google-cloud-storage = { workspace = true }
kaiki_config = { workspace = true }
mime_guess = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
