[package]
name = "kaiki_napi"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js bindings for kaiki visual regression testing"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
compact_str = { workspace = true }
futures = { workspace = true }
kaiki_config = { workspace = true }
kaiki_core = { workspace = true }
kaiki_git = { workspace = true }
kaiki_notify = { workspace = true }
kaiki_report = { workspace = true }
kaiki_storage = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"
