[package]
name = "kaiki_diff_wasm"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for kaiki image diff engine"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kaiki_diff = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-test = { workspace = true }
